namespace TicTacToe.Models.Types;

public enum PlayerType
{
    MachinePlayer,
    UserPlayer
}
